@@ -1,2 +1,3 @@
 EBUILD cl-kde-meta-4.4.4.ebuild 3476 RMD160 b98c56f8374aee4412013166536b4d08d5b2b085 SHA1 3c6544aa5871de02c4f063387d874b2070c9b8c9 SHA256 5b82419c116207b772e09e8033f56fa4446615ddd2a2d32aeffe7183b59993f0
-MISC ChangeLog 496 RMD160 901b67dd2eccf11d14ce282d91ad0154ea55d634 SHA1 c569bfe7ab33897b49e5f50d90f99b71460b3b5d SHA256 2d7038198c7b4a7fa115f22319d96bcc838f959fe518ee3d9993d33afcf34b23
+EBUILD cl-kde-meta-4.5.1.ebuild 3578 RMD160 2e582788bcee1809f873e9dfe2877ecc5aa32e59 SHA1 23a360b8024bd1a604a051dbef97d595a5e80883 SHA256 2df3ad75f9f2c818671a0833476d33eac64dc68961663f5bc463b4e2345b055b
+MISC ChangeLog 645 RMD160 d9d5bc6e7165245c7060b7a626ecc14285ebba2c SHA1 4ecf8ac0bbd4fe620c3a660193bd70ab870c0a20 SHA256 5e092c2358838c3fac345e82ee3d10fbba1cceea50dbe520e6649d3c47741163
