@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-kde-meta-4.5.1 (15 Sep 2010)
+
+  15 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cl-kde-meta-4.5.1.ebuild:
+  Added new version
+
   21 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   cl-kde-meta-4.4.4.ebuild:
   Added kget
